--- a/bilet/css.css
+++ b/bilet/css.css
@@ -17,50 +17,93 @@
   vertical-align: center;
 }
 
-button {
-  background-color: #ddd;   /* Зеленый цвет фона */
-  border: none; 			/* Убрать границу кнопки */
+/*button {*/
+/*  background-color: #ddd;   !* Зеленый цвет фона *!*/
+/*  border: none; 			!* Убрать границу кнопки *!*/
+/*  width: 400px;*/
+/*  height: 16px;*/
+/*  display: block; 	        !* Сделать кнопку блочным элементом *!*/
+/*  margin-left: 2px;*/
+/*  margin-bottom: 2px;*/
+/*  cursor: pointer; 			!* Изменить форму курсора при наведении на кнопку *!*/
+/*  border-radius: 4px; 		!* Закругленные углы кнопки *!*/
+/*  text-align: center; 		!* Центрирование текста *!*/
+/*  vertical-align: center;*/
+/*  font-size: 12px; 			!* Размер текста кнопки *!*/
+/*}*/
+/*button:hover{*/
+/*  background-color: #6d6d6d;*/
+/*}*/
+.custom-button{
+  background-color: #ddd;
   width: 400px;
   height: 16px;
-  display: block; 	        /* Сделать кнопку блочным элементом */
+  margin-left: 2px;
+  margin-bottom: 2px;
+  border: none;
+  border-radius: 4px; 		/* Закругленные углы кнопки */
+  text-align: center; 		/* Центрирование текста */
+  vertical-align: center;
+  font-size: 12px; 			/* Размер текста кнопки */
+  cursor: pointer;
+  user-select: none;
+}
+.custom-button:hover{
+  background-color: #6d6d6d;
+}
+
+.currentQuestion-btn{
+  background-color: #ddd;   /* Зеленый цвет фона */
+  border: none; 			/* Убрать границу кнопки */
+  width: 19px;
+  height: 19px;
+  display: inline-block; 	        /* Сделать кнопку блочным элементом */
   margin-left: 2px;
   margin-bottom: 2px;
   cursor: pointer; 			/* Изменить форму курсора при наведении на кнопку */
   border-radius: 4px; 		/* Закругленные углы кнопки */
   text-align: center; 		/* Центрирование текста */
-  vertical-align: center;
+  vertical-align: central;
   font-size: 12px; 			/* Размер текста кнопки */
+  user-select: none;
 }
-button:hover{
+.currentQuestion-btn:hover{
   background-color: #6d6d6d;
 }
 
+.btn-group{
+  display: flex;
+  flex-direction: row;
+}
 
 /*.bs-example > .btn,*/
 /*.bs-example > .btn-group {*/
 /*  margin-top: 5px;*/
 /*  margin-bottom: 5px;*/
 /*}*/
+
 /*.myconf-button{*/
 /*  padding-left: 0px;*/
 /*  padding-bottom: 0px;*/
 /*  padding-top: 0px;*/
-
 /*  !*padding-right: 5px;*!*/
 /*  font-size: 30px;*/
 /*}*/
+
 /*button.list-group-item.active, button.list-group-item.active:hover, button.list-group-item.active:focus {*/
 /*  z-index: 2;*/
 /*  color: #fff;*/
 /*  background-color: #428bca;*/
 /*  border-color: #428bca;*/
 /*}*/
-/*#buttonPanel.btn-group-sm > button , #buttonPanel1 > button, #buttonPanel2 > button, #buttonPanel3 > button , #buttonPanel4 > button {*/
+
+/*#buttonPanel.btn-group-sm > button , #buttonPanel > button, #buttonPanel2 > button, #buttonPanel3 > button , #buttonPanel4 > button {*/
 /*  width: 35px;*/
 /*  height: 30px;*/
 /*  padding: 5px 0px !important;*/
 /*  margin-bottom: 5px !important;*/
 /*}*/
+
 /*.current-button{*/
 /*  !*border-top: 4px solid gold ;*!*/
 /*  color: #333;*/
